<resources>
    <string name="app_name">Book Store</string>
    <string name="inventory_table">The inventory table contains %1$s books \n\n</string>
    <string name="populate_with_dummy_data">populate with dummy data</string>
    <string name="category_overview">Book details</string>
    <string name="item_name">Name</string>
    <string name="editor_activity_title_new_item">Add a Book</string>
    <string name="editor_activity_title_edit_item">Edit a Book</string>
    <string name="insert_dummy_data">Insert dummy data</string>
    <string name="delete_all_entries">Delete all entries</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="editor_delete_book_failed">Deleting book failed</string>
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <string name="empty_view_subtitle_text">Get started by adding a book</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_s_name">Supplier</string>
    <string name="supplier_s_phone">Phone</string>
    <string name="editor_insert_book_failed">Error with saving book</string>
    <string name="editor_insert_book_successful">Book saved</string>
    <string name="editor_update_book_failed">Error with updating book</string>
    <string name="editor_update_book_successful">Book updated</string>
    <string name="editor_empty_field">Please fill all fields</string>
    <string name="editor_negative_price">Price cannot be negative</string>
    <string name="editor_negative_quantity">Quantity cannot be negative</string>
    <string name="button_buy">buy</string>
    <string name="price_text">Price:\ </string>
    <string name="price_currency">\ Euro</string>
    <string name="quantity_text">In stock:\ </string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="dummy_book_one_name">Pride and Prejudice</string>
    <string name="dummy_book_one_price">30</string>
    <string name="dummy_book_one_quantity">15</string>
    <string name="dummy_book_one_supplier_name">Classics Inc.</string>
    <string name="dummy_book_one_supplier_phone">0356456859</string>
    <string name="dummy_book_two_name">The Dark Tower</string>
    <string name="dummy_book_two_price">20</string>
    <string name="dummy_book_two_quantity">25</string>
    <string name="dummy_book_two_supplier_name">Best of Horror</string>
    <string name="dummy_book_two_supplier_phone">0246455559</string>
    <string name="log_rows_deleted">\ rows deleted from inventory database</string>
    <string name="order_book">order book</string>
    <string name="edit_tel">tel:</string>
</resources>
